{{$NEXT}}

0.020     2015-09-18 10:10:44 EDT
  - Update copied files on build instead of release
  - Don't add self to develop-requires

0.019     2015-09-08 18:24:07 EDT
  - Generate INSTALL document
  - Add CONTRIBUTING.md to minting profile, and exclude root-level CONTRIBUTING
    documents from distribution gathering
  - Allow setting an empty value for github_user to use [GithubMeta] default

0.018     2015-09-02 19:03:32 EDT
  - Allow for version rewriting in script or bin in git commits

0.017     2015-09-02 01:01:32 EDT
  - Exclude both installer files from Git::GatherDir

0.016     2015-08-31 16:14:04 EDT
  - Allow [ModuleBuildTiny::Fallback] as installer

0.015     2015-08-28 18:21:03 EDT
  - Add script/ as another ExecDir for [ModuleBuildTiny] compatibility

0.014     2015-08-28 16:43:08 EDT
  - Fix installer option to allow for Build.PL when using [ModuleBuildTiny]

0.013     2015-08-28 15:24:52 EDT
  - Add [ModuleBuildTiny] as prereq to support installer option
  - Remove makemaker option in favor of installer = MakeMaker::Awesome

0.012     2015-08-28 14:59:32 EDT
  - Add installer option

0.011     2015-08-17 12:24:04 EDT
  - Remove now unnecessary mma_* options

0.010     2015-08-16 22:25:27 EDT
  - Add pluginbundle role Config::Slicer so options can be specified for any plugin
  - Add .travis.yml to minting profile

0.009     2015-08-15 14:11:22 EDT
  - add pod_tests option to use PodSyntaxTests and PodCoverageTests

0.008     2015-08-10 13:32:38 EDT
  - add minting profile

0.007     2015-07-27 13:01:26 EDT
  - add Git::Contributors and MetaNoIndex for better metadata
  - generate dist README with ReadmeAnyFromPod instead of Readme

0.006     2015-07-27 11:51:10 EDT
  - Git-add files newly created during build
  - Support FAKE_RELEASE=1 env var

0.005     2015-07-27 10:24:59 EDT
  - Depend on plugins explicitly used
  - Add package of $self as prereq to allow subclassing

0.004     2015-06-27 00:11:59 EDT