@@ -111,8 +111,9 @@ the upload to CPAN.
 =head1 OPTIONS
 
 This bundle composes the L<Dist::Zilla::Role::PluginBundle::Config::Slicer>
-role, so options for any included plugin may be specified in that format.
-Additionally, the following options are provided.
+role, so options for any included plugin may be specified in that format. It
+also composes L<Dist::Zilla::Role::PluginBundle::PluginRemover> so that plugins
+may be removed. Additionally, the following options are provided.
 
 =head2 github_user
 
