@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add PluginRemover role to allow -remove option
 
 0.020     2015-09-18 10:10:44 EDT
   - Update copied files on build instead of release
